# elliptica

./: .gitignore  ANALYSIS_INDEX.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_SUMMARY.txt  BOTTLENECK_REPORT.md  CLEANUP_SUMMARY.md  CODE_REVIEW_GUIDE.md  CRITICAL_FIXES_APPLIED.md  DETAILED_ARCHITECTURE_ANALYSIS.md  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_ISSUES.md  GPU_PIPELINE_SUMMARY.md  LICENSE  LuoAmplitude.md  MANIFEST.in  PIPELINE_ARCHITECTURE.md  README.md  SCHEMA.md  SPEC.md  TESTING.md  TEXTURE_PIPELINE_ANALYSIS.md  debug_mps_sync.py  debug_smear.py  gl_visualization.py  profile_dpg_texture_upload.py  profile_gpu_rgba_conversion.py  profile_texture_pipeline.py  project.flowcol  pyproject.toml  render_difference_remark.md  requirements.txt  solver_benchmark.py  test_blur_comparison.py  test_colorization.py  test_gpu_edge_blur.py  test_gpu_memory_lifecycle.py  test_mask_deduplication.py  test_pde_system.py  test_per_region_colorization.py  todo.md  (+3 more)
docs/: BOUNDARY_MASK_FIX.md  DEAD_CODE_CLEANUP.md  EDIT_MODE_PERFORMANCE.md  MERGE_REVIEW.md  QUICK_WINS_STABILITY.md  STATE_MANAGEMENT_REFACTOR.md  STATE_MANAGER_MIGRATION.md  TECH_DEBT.md  codex_oklch_palette_editor_checklist.md  codex_oklch_palette_editor_spec.md  supersampling_plan.md  turbulence.md
elliptica/: __init__.py  defaults.py  field_pde.py  image_utils.py  lic.py  mask_utils.py  migrate.py  palettes.py  palettes_user.json  palettes_user.json.bak  pipeline.py  poisson.py  render.py  serialization.py  shapes.py  types.py
flowcol/: config.py  defaults.py  field.py  field_pde.py  lic.py  lospec.py  mask_utils.py  palettes_user.json  pipeline.py  poisson.py  render.py  serialization.py  (+2 more)
(+142 files in other folders)
