[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elliptica"
version = "0.1.0"
description = "Physics-based generative art framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "brylic @ file:///Users/afolkest/code/visual_arts/brylic",
    "numba>=0.57.0",
    "scipy>=1.10.0",
    "pyamg>=5.0.0",
    "pillow>=9.0.0",
    "scikit-image>=0.20.0",
    "dearpygui>=1.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
elliptica = "elliptica.ui.dpg.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["elliptica*"]

[tool.setuptools.package-data]
elliptica = ["*.json", "palettes/*.json"]
